--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -32,7 +32,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" ng-href="/#/"><img alt="" src="img/SHeroLogo.png" height="150%"></a>
+          <a class="navbar-brand" ng-href="#/">SHero</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -40,21 +40,27 @@
           <ul class="nav navbar-nav"></ul>
           <form class="navbar-form navbar-left" role="search">
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search">
+              <input type="text" class="form-control" placeholder="Item" id="item">
+              <select class="form-control" id="location">
+                <option value="" selected disabled>Location</option>
+                <option>Barcelona</option>
+                <option>Munich</option>
+                <option>Paris</option>
+              </select>
             </div>
             <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
           </form>
           <ul class="nav navbar-nav navbar-right">
-            <li><a ng-href="/#/AddItem"><i class="fa fa-plus"></i> Add Item</a></li>
+            <li ng-class="{ active: isActive('#/AddItem')}"><a ng-href="#/AddItem"><i class="fa fa-plus"></i> Add Item</a></li>
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user"></i> Profile <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a ng-href="/#/EditUser"><i class="fa fa-wrench"></i> Edit</a></li>
+                <li><a ng-href="#/EditUser"><i class="fa fa-wrench"></i> Edit</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a ng-href="/#/EditItem">Item 1</a></li>
-                <li><a ng-href="/#/EditItem">Item 2</a></li>
+                <li><a ng-href="#/EditItem">Item 1</a></li>
+                <li><a ng-href="#/EditItem">Item 2</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a ng-href="/#/">Logout</a></li>
+                <li><a ng-href="#/">Logout</a></li>
               </ul>
             </li>
           </ul>
@@ -73,7 +79,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="fa fa-copyright"></span> SHero</p>
       </div>
     </div>
 
@@ -106,7 +112,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="app/app.js"></script>
         <script src="app/controllers/main.js"></script>
-        <script src="app/controllers/about.js"></script>
+        <script src="app/controllers/search.js"></script>
         <script src="app/controllers/item.js"></script>
         <!-- endbuild -->
 </body>
