Added login-button. added login.js. Working modal

--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -15,6 +15,7 @@
     <!-- NAVIGATION -->
     <div ng-include="'app/views/Navbar.html'"></div>
  	
+
 		<!-- CONTENT OF THE PAGE -->
     <div class="container">
     <div ui-view=""></div>
@@ -58,5 +59,6 @@
     <script src="app/controllers/usermenu.js"></script>
     <script src="app/controllers/item.js"></script>
     <script src="app/controllers/datepicker.js"></script>
+    <script src="app/controllers/login.js"></script>
   </body>
 </html>
