Small text edit

--- a/shero/src/main/webapp/app/directives/Navbar/LoginButton.html
+++ b/shero/src/main/webapp/app/directives/Navbar/LoginButton.html
@@ -17,6 +17,6 @@
         </div>
     </script>
 
-    <button type="button" class="btn btn-default" ng-click="open()">LOG IN (but you are actually not)!</button>
+    <button type="button" class="btn btn-default" ng-click="open()">LOG IN!</button>
     <div ng-show="selected">Selection from a modal: {{ selected }}</div>
 </div>
