Changes position of login modal

--- a/shero/src/main/webapp/app/directives/Navbar/LoginButton.html
+++ b/shero/src/main/webapp/app/directives/Navbar/LoginButton.html
@@ -1,4 +1,4 @@
-<div ng-controller="LoginCtrl">
+<div class="navbar-right" ng-controller="LoginCtrl">
     <script type="text/ng-template" id="myModalContent.html">
         <div class="modal-header">
             <h3 class="modal-title">I'm a modal!</h3>
