--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
 
-    <!-- NAVIGATION -->
+    <!-- INCLUDES NAVIGATION -->
     <div ng-include="'app/views/Navbar.html'"></div>
  	
 		<!-- CONTENT OF THE PAGE -->
