Refactoring of Availability-Datelist. Added Badge-Counter and User-Info if no date is selected

--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="SHeroApp">
+<html lang="en" ng-app="SHeroApp">
   <head>
     <meta charset="utf-8">
     <title></title>
