Bugfix with Edit-User page. Is now shown again.

--- a/shero/src/main/webapp/app/directives/Navbar/UserMenu.html
+++ b/shero/src/main/webapp/app/directives/Navbar/UserMenu.html
@@ -7,7 +7,7 @@
   <li ng-show="usermenuCtrl.loggedIn" class="dropdown">
     <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user"></i> Profile <span class="caret"></span></a>
     <ul class="dropdown-menu">
-      <li><a ui-sref="app.editUser"><i class="fa fa-wrench"></i> Edit</a></li>
+      <li><a ui-sref="editUser"><i class="fa fa-wrench"></i> Edit</a></li>
       <li role="separator" class="divider"></li>
       <li><a ui-sref="editItem">Item 1</a></li>
       <li><a ui-sref="editItem">Item 2</a></li>
