Bugfix for AddItem-Process in Firefox

--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="SHeroApp">
+<html lang="en" ng-app="SHeroApp" style="overflow-y: scroll;">
   <head>
     <meta charset="utf-8">
     <title></title>
@@ -28,16 +28,6 @@
         <p><span class="fa fa-copyright"></span> SHero</p>
       </div>
     </div>
-
-     <script>
-       !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
-       (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
-       r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
-       }(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
 
     <script src="lib/jquery/jquery.js"></script>
     <script src="lib/angular/angular.js"></script>
