--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -51,6 +51,6 @@
     <script src="app/controllers/usermenu.js"></script>
     <script src="app/controllers/addItem.js"></script>
     <script src="app/controllers/tags.js"></script>
-    <script src="app/controllers/login.js"></script>
+    <script src="app/controllers/modal-login.js"></script>
   </body>
 </html>
