added updated version of edit user view, controller also sends data to backend, NEEDS USER ID to be finalized

--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -50,6 +50,7 @@
     <script src="app/controllers/searchbar.js"></script>
     <script src="app/controllers/usermenu.js"></script>
     <script src="app/controllers/addItem.js"></script>
+    <script src="app/controllers/editUser.js"></script>
     <script src="app/controllers/tags.js"></script>
     <script src="app/controllers/modal-login.js"></script>
   </body>
