--- a/shero/src/main/webapp/app/directives/Navbar/UserMenu.html
+++ b/shero/src/main/webapp/app/directives/Navbar/UserMenu.html
@@ -1,6 +1,6 @@
 <ul class="nav navbar-nav navbar-right">
   <!-- Show if user is not logged-in --> 
-  <li ng-hide="loggedIn"><a ng-href="#/" ng-click="open();">Login</a>
+  <li ng-hide="loggedIn"><a ng-href="#/" ng-click="openModal();">Login</a>
  
   <!-- Show if user is logged in -->
   <li ng-show="loggedIn"><a ui-sref="addItem"><i class="fa fa-plus"></i> Add Item</a></li>
