added flow-ng to project, can drag and drop or upload picture to browser

--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -42,6 +42,7 @@
     <script src="lib/angular/angular-ui-router.min.js"></script>
     <script src="lib/gm-datepicker/datepickerMultiSelect.js"></script>
     <script src="lib/tags-input/ng-tags-input.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ng-flow/2.6.1/ng-flow-standalone.min.js"></script> 
 
     <script src="app/app.js"></script>
     <script src="app/states.js"></script>
