--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -47,6 +47,7 @@
     <script src="app/app.js"></script>
     <script src="app/states.js"></script>
     <script src="app/directives.js"></script>
+    <script src="app/services/imageservice.js"></script>
     <script src="app/controllers/main.js"></script>
     <script src="app/controllers/searchbar.js"></script>
     <script src="app/controllers/usermenu.js"></script>
