Register form completed (password hashed, data sent to serve). Bug in AddItem-Tags field fixed. Services for server-communication

--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -42,12 +42,15 @@
     <script src="lib/angular/angular-ui-router.min.js"></script>
     <script src="lib/gm-datepicker/datepickerMultiSelect.js"></script>
     <script src="lib/tags-input/ng-tags-input.js"></script>
+    <script src="lib/sha256/sha256.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ng-flow/2.6.1/ng-flow-standalone.min.js"></script> 
 
     <script src="app/app.js"></script>
     <script src="app/states.js"></script>
     <script src="app/directives.js"></script>
     <script src="app/services/imageservice.js"></script>
+    <script src="app/services/tags.js"></script>
+    <script src="app/services/register.js"></script>
     <script src="app/controllers/main.js"></script>
     <script src="app/controllers/searchbar.js"></script>
     <script src="app/controllers/usermenu.js"></script>
