--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -44,6 +44,7 @@
     <script src="lib/tags-input/ng-tags-input.js"></script>
     <script src="lib/sha256/sha256.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ng-flow/2.6.1/ng-flow-standalone.min.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js"></script>
 
     <script src="app/app.js"></script>
     <script src="app/states.js"></script>
@@ -51,6 +52,7 @@
     <script src="app/services/imageservice.js"></script>
     <script src="app/services/tags.js"></script>
     <script src="app/services/register.js"></script>
+    <script src="app/services/userData.js"></script>
     <script src="app/controllers/main.js"></script>
     <script src="app/controllers/searchbar.js"></script>
     <script src="app/controllers/usermenu.js"></script>
