Renaming of Services and adopting of new service functions in controllers

--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -51,8 +51,9 @@
     <script src="app/directives.js"></script>
     <script src="app/services/imageservice.js"></script>
     <script src="app/services/tags.js"></script>
-    <script src="app/services/register.js"></script>
+    <script src="app/services/users.js"></script>
     <script src="app/services/userData.js"></script>
+    <script src="app/services/items.js"></script>
     <script src="app/controllers/main.js"></script>
     <script src="app/controllers/searchbar.js"></script>
     <script src="app/controllers/usermenu.js"></script>
