address-selection in addItem-view. new item is sent to server. very easy session and user management. userMenu adopted to user's data

--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="SHeroApp" style="overflow-y: scroll;">
+<html lang="en" ng-app="SHeroApp"  ng-controller="MainCtrl" style="overflow-y: scroll;">
   <head>
     <meta charset="utf-8">
     <title>SHero</title>
