--- a/shero/src/main/webapp/app/directives/Navbar/UserMenu.html
+++ b/shero/src/main/webapp/app/directives/Navbar/UserMenu.html
@@ -5,12 +5,17 @@
   <!-- Show if user is logged in -->
   <li ng-show="loggedIn"><a ui-sref="addItem"><i class="fa fa-plus"></i> Add Item</a></li>
   <li ng-show="loggedIn" class="dropdown">
-    <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user"></i> Profile <span class="caret"></span></a>
+    <a class="dropdown-toggle" 
+       data-toggle="dropdown" 
+       role="button" 
+       aria-haspopup="true" 
+       aria-expanded="false">
+        <i class="fa fa-user"></i> {{$storage.user.firstname}} {{$storage.user.lastname}} <span class="caret"></span>
+      </a>
     <ul class="dropdown-menu">
       <li><a ui-sref="editUser"><i class="fa fa-wrench"></i> Edit</a></li>
       <li role="separator" class="divider"></li>
-      <li><a ui-sref="editItem">Item 1</a></li>
-      <li><a ui-sref="editItem">Item 2</a></li>
+      <li ng-repeat="item in $storage.user.items"><a ui-sref="editItem">{{item.name}}</a></li>
       <li role="separator" class="divider"></li>
       <li><a ui-sref="home" ng-click="logout();">Logout</a></li>
     </ul>
