added special controller for register-view of login-popup

--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -61,5 +61,6 @@
     <script src="app/controllers/editUser.js"></script>
     <script src="app/controllers/tags.js"></script>
     <script src="app/controllers/modal-login.js"></script>
+    <script src="app/controllers/register.js"></script>
   </body>
 </html>
