--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -49,10 +49,10 @@
     <script src="app/app.js"></script>
     <script src="app/states.js"></script>
     <script src="app/directives.js"></script>
-    <script src="app/services/imageservice.js"></script>
+    <script src="app/services/upload.js"></script>
     <script src="app/services/tags.js"></script>
     <script src="app/services/users.js"></script>
-    <script src="app/services/userData.js"></script>
+    <script src="app/services/sessionStorage.js"></script>
     <script src="app/services/items.js"></script>
     <script src="app/controllers/main.js"></script>
     <script src="app/controllers/searchbar.js"></script>
