--- a/shero/src/main/webapp/app/directives/Navbar/SearchBar.html
+++ b/shero/src/main/webapp/app/directives/Navbar/SearchBar.html
@@ -1,11 +1,10 @@
-<form ng-hide="searchbarCtrl.isHome" class="navbar-form navbar-left" role="search">
+<form ng-hide="isHome" class="navbar-form navbar-left" role="search" ng-submit="processForm()">
   <div class="form-group">
-    <input type="text" class="form-control" placeholder="Item" id="item">
-    <select class="form-control" id="location">
-      <option value="" selected disabled>Location</option>
-      <option>Barcelona</option>
-      <option>Munich</option>
-      <option>Paris</option>
+    <input type="text" class="form-control" placeholder="What are you looking for?" id="name" name="name" ng-model="formData.name">
+    <select class="form-control" id="city" name="city" ng-model="formData.city">
+      <option value="Barcelona">Barcelona</option>
+      <option value="Munich">Munich</option>
+      <option value="Paris">Paris</option>
     </select>
   </div>
   <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
