Made support for expanding items

--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -62,5 +62,6 @@
     <script src="app/controllers/tags.js"></script>
     <script src="app/controllers/modal-login.js"></script>
     <script src="app/controllers/register.js"></script>
+    <script src="app/controllers/searchResults.js"></script>
   </body>
 </html>
