--- a/shero/src/main/webapp/app/directives/Navbar/SearchBar.html
+++ b/shero/src/main/webapp/app/directives/Navbar/SearchBar.html
@@ -2,12 +2,12 @@
     <div class="form-group">
         <input type="text" class="form-control" placeholder="What are you looking for?" id="name" name="name" ng-model="formData.name">
         <select class="form-control" id="city" name="city" ng-model="formData.city">
-            <option value="Barcelona">Barcelona</option>
-            <option value="Munich">Munich</option>
-            <option value="Paris">Paris</option>
+            <option ng-repeat="city in cities" value="{{city.city}}">
+                {{city.city}}
+            </option>
         </select>
-        <input type="date" class="form-control" id="from" name="from" ng-model="formData.from" ng-value="getCurrentDate();">
-        <input type="date" class="form-control" id="to" name="to" ng-model="formData.to" ng-value="getCurrentDate();">
+        <input type="date" class="form-control" id="from" name="from" ng-model="formData.from">
+        <input type="date" class="form-control" id="to" name="to" ng-model="formData.to">
     </div>
     <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
 </form>
