--- a/shero/src/main/webapp/app/directives/Navbar/SearchBar.html
+++ b/shero/src/main/webapp/app/directives/Navbar/SearchBar.html
@@ -6,8 +6,8 @@
                 {{city.city}}
             </option>
         </select>
-        <input type="date" class="form-control" id="from" name="from" ng-model="formData.from">
-        <input type="date" class="form-control" id="to" name="to" ng-model="formData.to">
+        <input type="text" class="form-control" id="from" name="from" ng-model="formData.from">
+        <input type="text" class="form-control" id="to" name="to" ng-model="formData.to">  
     </div>
     <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
 </form>
