continued working on list-view

--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/searchresults.css">
+      
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="lib/tags-input/ng-tags-input.css">
