Added pagination to list items
Needs a bit more styling, but functionality is there

--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -45,6 +45,7 @@
     <script src="lib/gm-datepicker/datepickerMultiSelect.js"></script>
     <script src="lib/tags-input/ng-tags-input.js"></script>
     <script src="lib/sha256/sha256.js"></script>
+    <script src="lib/pagination/dirPagination.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ng-flow/2.6.1/ng-flow-standalone.min.js"></script> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js"></script>
 
