--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -46,8 +46,8 @@
     <script src="lib/tags-input/ng-tags-input.js"></script>
     <script src="lib/sha256/sha256.js"></script>
     <script src="lib/pagination/dirPagination.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ng-flow/2.6.1/ng-flow-standalone.min.js"></script> 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js"></script>
+    <script src="lib/ng-flow/ng-flow-standalone.min.js"></script>
+    <script src="lib/ng-storage/ngStorage.min.js"></script>
 
     <script src="app/app.js"></script>
     <script src="app/states.js"></script>
