Autocomplete fields in searchbar for item & location

--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -8,6 +8,7 @@
 
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/searchresults.css">
+        <link rel="stylesheet" href="css/searchbar.css">
 
         <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
@@ -48,6 +49,7 @@
     <script src="lib/pagination/dirPagination.js"></script>
     <script src="lib/ng-flow/ng-flow-standalone.min.js"></script>
     <script src="lib/ng-storage/ngStorage.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angucomplete-alt/2.1.0/angucomplete-alt.min.js"></script>
 
     <script src="app/app.js"></script>
     <script src="app/states.js"></script>
