--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -70,5 +70,6 @@
     <script src="app/controllers/modalLogin.js"></script>
     <script src="app/controllers/register.js"></script>
     <script src="app/controllers/searchresults.js"></script>
+    <script src="app/controllers/editItem.js"></script>
   </body>
 </html>
