Extended UserMenu+states to link to MyRentals - page

--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -54,6 +54,7 @@
     <script src="app/app.js"></script>
     <script src="app/states.js"></script>
     <script src="app/directives.js"></script>
+      
     <script src="app/services/upload.js"></script>
     <script src="app/services/tags.js"></script>
     <script src="app/services/users.js"></script>
@@ -61,6 +62,7 @@
     <script src="app/services/items.js"></script>
     <script src="app/services/searchResults.js"></script>
     <script src="app/services/addresses.js"></script>
+      
     <script src="app/controllers/main.js"></script>
     <script src="app/controllers/searchbar.js"></script>
     <script src="app/controllers/usermenu.js"></script>
@@ -71,5 +73,6 @@
     <script src="app/controllers/register.js"></script>
     <script src="app/controllers/searchresults.js"></script>
     <script src="app/controllers/editItem.js"></script>
+    <script src="app/controllers/myRentals.js"></script>
   </body>
 </html>
