--- a/shero/src/main/webapp/app/directives/Navbar/UserMenu.html
+++ b/shero/src/main/webapp/app/directives/Navbar/UserMenu.html
@@ -22,6 +22,8 @@
                 <a ui-sref="addItem"><i class="fa fa-plus"></i> Be a SHero!</a>
             </li>
             <li role="separator" class="divider"></li>
+            <li><a ui-sref="myRentals">My Rentals</a></li>
+            <li role="separator" class="divider"></li>
             <li><a ui-sref="home" ng-click="logout();"><i class="fa fa-sign-out"></i> Logout</a></li>
         </ul>
     </li>
