added send message modal

--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -74,5 +74,6 @@
     <script src="app/controllers/searchresults.js"></script>
     <script src="app/controllers/editItem.js"></script>
     <script src="app/controllers/myRentals.js"></script>
+    <script src="app/controllers/modalQuestions.js"></script>
   </body>
 </html>
