form input in controller  and created service for sending to backend

--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -62,6 +62,7 @@
     <script src="app/services/items.js"></script>
     <script src="app/services/searchResults.js"></script>
     <script src="app/services/addresses.js"></script>
+    <script src="app/services/message.js"></script>
       
     <script src="app/controllers/main.js"></script>
     <script src="app/controllers/searchbar.js"></script>
