--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -76,5 +76,6 @@
     <script src="app/controllers/editItem.js"></script>
     <script src="app/controllers/myRentals.js"></script>
     <script src="app/controllers/modalQuestions.js"></script>
+    <script src="app/controllers/modalRentItem.js"></script>
   </body>
 </html>
