--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="css/searchbar.css">
         <link rel="stylesheet" href="css/myrentals.css">
         <link rel="stylesheet" href="css/modalRentItem.css">
+        <link rel="stylesheet" href="css/edititem.css">
         <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="lib/tags-input/ng-tags-input.css">
