Made modal for rating an item

--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -77,5 +77,6 @@
     <script src="app/controllers/myRentals.js"></script>
     <script src="app/controllers/modalQuestions.js"></script>
     <script src="app/controllers/modalRentItem.js"></script>
+    <script src="app/controllers/modalRateItem.js"></script>
   </body>
 </html>
