SearchBar in NavBar not shown on LandingPage

--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -80,5 +80,6 @@
     <script src="app/controllers/modalQuestions.js"></script>
     <script src="app/controllers/modalRentItem.js"></script>
     <script src="app/controllers/modalRateItem.js"></script>
+    <script src="app/controllers/navbar.js"></script>
   </body>
 </html>
