Navbar is pushing content down when collapsed

--- a/shero/src/main/webapp/app/directives/Navbar/SearchBar.html
+++ b/shero/src/main/webapp/app/directives/Navbar/SearchBar.html
@@ -41,7 +41,7 @@
                    placeholder="From"/>
             <span class="input-group-btn">
                 <button type="button" 
-                        class="btn btn-default" 
+                        class="btn btn-default searchbar-button" 
                         ng-click="fromOpen($event)">
                     <i class="fa fa-calendar"></i>
                 </button>
@@ -62,7 +62,7 @@
                    placeholder="To"/>
             <span class="input-group-btn">
                 <button type="button" 
-                        class="btn btn-default" 
+                        class="btn btn-default searchbar-button" 
                         ng-click="toOpen($event)">
                     <i class="fa fa-calendar"></i>
                 </button>
@@ -70,5 +70,5 @@
         </p>
     </div>
     
-    <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+    <button type="submit" class="btn btn-default searchbar-button"><i class="fa fa-search"></i></button>
 </form>
