--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html lang="en" ng-app="SHeroApp"  ng-controller="MainCtrl" style="overflow-y: scroll;">
     <head>
         <meta charset="utf-8">
@@ -18,20 +17,15 @@
         <link rel="stylesheet" href="lib/tags-input/ng-tags-input.bootstrap.css">
     </head>
   <body>
-
-    <!-- INCLUDES NAVIGATION -->
-    <div ng-include="'app/views/Navbar/Navbar.html'"></div>
  	
 		<!-- CONTENT OF THE PAGE -->
-    <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
-      <div ui-view=""></div>
-    </div>
+    <div>
 
-    <!-- FOOTER -->
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 footer">
-      <div class="container">
-        <p><span class="fa fa-copyright"></span> SHero</p>
-      </div>
+      <!-- INCLUDES NAVIGATION -->
+      <div ng-include="'app/views/Navbar/Navbar.html'"></div> 
+
+
+      <div ui-view="" class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12"></div>
     </div>
 
     <script src="lib/jquery/jquery.js"></script>
