Fixed footer, added background image, changed color of item-description
TODO: Bootstrap Landingpage

--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="css/searchresults.css">
         <link rel="stylesheet" href="css/searchbar.css">
         <link rel="stylesheet" href="css/myrentals.css">
+        <link rel="stylesheet" href="css/landingpage.css">
         <link rel="stylesheet" href="css/modalRentItem.css">
         <link rel="stylesheet" href="css/edititem.css">
         <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
@@ -28,8 +29,8 @@
     </div>
 
     <!-- FOOTER -->
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 footer">
-      <div class="container">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+      <div class="footer">
         <p><span class="fa fa-copyright"></span> SHero</p>
       </div>
     </div>
