--- a/shero/src/main/webapp/index.html
+++ b/shero/src/main/webapp/index.html
@@ -24,18 +24,16 @@
 
       <!-- INCLUDES NAVIGATION -->
       <div ng-include="'app/views/Navbar/Navbar.html'"></div> 
+      
+        <div ui-view="" class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12"></div>
 
-
-<<<<<<< HEAD
-    <!-- FOOTER -->
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      <div class="footer">
-        <p><span class="fa fa-copyright"></span> SHero</p>
+        <!-- FOOTER
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <div class="footer">
+            <p><span class="fa fa-copyright"></span> SHero</p>
+          </div>
+        </div>-->
       </div>
-=======
-      <div ui-view="" class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12"></div>
->>>>>>> origin/development
-    </div>
 
     <script src="lib/jquery/jquery.js"></script>
     <script src="lib/angular/angular.js"></script>
